# moltbook-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sync-name.bat  sync-name.sh
config/: config.json  register.json
data/: HISTORY.md.example  MEMORY.md.example  SOUL.md
docs/: API_REFERENCE.md  CHANGELOG.md  CONFIG-REFERENCE.md  CONFIGURATION.md  FEATURES.md  INTELLIGENCE.md  MOLTBOOK_FEATURES_STATUS.md  WHATS-CONFIGURABLE.md  skill.md
scripts/: sync_agent_name.py
src/: __init__.py
src/clients/: __init__.py  gemini_client.py  moltbook_client.py
src/core/: __init__.py  agent.py
src/intelligence/: __init__.py
src/utils/: __init__.py  config_loader.py
tests/: __init__.py  conftest.py  test_gemini_client.py  test_intelligence_system.py  test_moltbook_client.py
